--- a/OpenGL005/OpenGL005.vcxproj
+++ b/OpenGL005/OpenGL005.vcxproj
@@ -43,14 +43,12 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -102,7 +100,6 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Dependence\include</AdditionalIncludeDirectories>
     </ClCompile>
@@ -119,7 +116,6 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Dependence\include</AdditionalIncludeDirectories>
     </ClCompile>
@@ -140,6 +136,7 @@
     <ClCompile Include="src\initialization.cpp" />
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\rander.cpp" />
     <ClCompile Include="src\Shader.cpp" />
@@ -152,6 +149,7 @@
     <ClInclude Include="src\DirLight.h" />
     <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\PointLight.h" />
     <ClInclude Include="src\render.h" />
     <ClInclude Include="src\Shader.h" />
@@ -160,6 +158,8 @@
     <ClInclude Include="src\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="res\Shader\DiffuseOnlyFragment.shader" />
+    <None Include="res\Shader\DiffuseOnlyVertex.shader" />
     <None Include="res\Shader\Vertex.shader" />
     <None Include="res\Shader\Fragment.shader" />
   </ItemGroup>
